--- a/vacuum/vacuum.cfg
+++ b/vacuum/vacuum.cfg
@@ -13,5 +13,7 @@ NEXT Next
 
 INVARIANT
     TypeOK
-    Saved
+    \* Clean
+CONSTANT 
+    size = 2
 \* Uncomment the previous line and add invariant names
